--- a/src/pages/change-how-you-eat/Styles.module.scss
+++ b/src/pages/change-how-you-eat/Styles.module.scss
@@ -1,13 +1,9 @@
-@import '../../styles/Variables.module.scss';
-@import '../../styles/Mixins.module.scss';
-@import '../../styles/Typography.module.scss';
-
-
-
-
+@import "../../styles/Variables.module.scss";
+@import "../../styles/Mixins.module.scss";
+@import "../../styles/Typography.module.scss";
 
 .stopsImg {
-  background: url('../../components/Images/Photos/stopsEat.jpg') no-repeat top center;
+  background: url("../../components/Images/Photos/stopsEat.jpg") no-repeat top
+    center;
   background-size: cover;
 }
-
