--- a/src/pages/choose-renewable-energy/Styles.module.scss
+++ b/src/pages/choose-renewable-energy/Styles.module.scss
@@ -1,10 +1,9 @@
-@import '../../styles/Variables.module.scss';
-@import '../../styles/Mixins.module.scss';
-@import '../../styles/Typography.module.scss';
-
+@import "../../styles/Variables.module.scss";
+@import "../../styles/Mixins.module.scss";
+@import "../../styles/Typography.module.scss";
 
 .stopsImg {
-  background: url('../../components/Images/Photos/stopsRenewable.jpg') no-repeat top center;
+  background: url("../../components/Images/Photos/stopsRenewable.jpg") no-repeat
+    top center;
   background-size: cover;
 }
-
