--- a/src/styles/Buttons.module.scss
+++ b/src/styles/Buttons.module.scss
@@ -1,10 +1,9 @@
-@import './Variables.module.scss';
-@import './Mixins.module.scss';
-@import './Typography.module.scss';
+@import "./Variables.module.scss";
+@import "./Mixins.module.scss";
+@import "./Typography.module.scss";
 
 .btn-default {
   color: #fff;
-  
 }
 .btn-primary,
 .btn,
@@ -42,7 +41,6 @@
   display: flex;
   text-align: center;
   justify-content: center;
-
 }
 .btn-lg {
   padding: 8px 15px;
@@ -66,12 +64,9 @@
   font-family: inherit;
 }
 
-
-
 /* Buttons */
 .btn-simple,
 .btn-gradient {
-  
   margin: 0;
   padding: 0;
   border-width: 2px;
@@ -83,7 +78,7 @@
   font-family: inherit;
   overflow: hidden;
   border-radius: $borderRadius;
-  background: rgba(255,255,255,0.4);
+  background: rgba(255, 255, 255, 0.4);
   color: $white;
   -webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
   transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
@@ -117,7 +112,6 @@
   font-size: 21px;
   padding: 17px 30px 21px;
   font-family: inherit;
-
 }
 .btn-simple.btn-lg,
 .btn-gradient.btn-lg {
@@ -128,7 +122,7 @@
 }
 .btn-simple.btn-default,
 .btn-gradient.btn-default {
-  background: rgba(255,255,255,0.4);
+  background: rgba(255, 255, 255, 0.4);
 }
 .btn-simple.btn-primary,
 .btn-gradient.btn-primary {
@@ -179,7 +173,7 @@
 }
 .btn-bordered:hover,
 .btn-bordered:focus {
-  border-color: rgba(255,255,255,0.7);
+  border-color: rgba(255, 255, 255, 0.7);
   text-decoration: none !important;
 }
 .btn-bordered.btn-xs {
@@ -196,7 +190,6 @@
 .btn-bordered.btn-md {
   font-size: 21px;
   font-family: inherit;
-
 }
 .btn-bordered.btn-lg {
   padding: 8px 15px;
@@ -204,12 +197,12 @@
   font-family: inherit;
 }
 .btn-bordered.btn-default {
-  border-color: rgba(255,255,255,0.4);
+  border-color: rgba(255, 255, 255, 0.4);
   color: #fff;
 }
 .btn-bordered.btn-default:hover,
 .btn-bordered.btn-default:focus {
-  border-color: rgba(255,255,255,0.7);
+  border-color: rgba(255, 255, 255, 0.7);
   text-decoration: none !important;
 }
 .btn-bordered.btn-primary {
@@ -229,38 +222,37 @@
   text-decoration: none !important;
 }
 .btn-bordered.btn-warning {
-  border-color: rgba(254,171,58,0.4);
+  border-color: rgba(254, 171, 58, 0.4);
   color: #feab3a;
 }
 .btn-bordered.btn-warning:hover,
 .btn-bordered.btn-warning:focus {
-  border-color: rgba(254,171,58,0.7);
+  border-color: rgba(254, 171, 58, 0.7);
 }
 .btn-bordered.btn-danger {
-  border-color: rgba(255,89,100,0.4);
+  border-color: rgba(255, 89, 100, 0.4);
   color: #ff5964;
 }
 .btn-bordered.btn-danger:hover,
 .btn-bordered.btn-danger:focus {
-  border-color: rgba(255,89,100,0.7);
+  border-color: rgba(255, 89, 100, 0.7);
 }
 .btn-bordered.btn-success {
-  border-color: rgba(40,183,141,0.4);
+  border-color: rgba(40, 183, 141, 0.4);
   color: #28b78d;
 }
 .btn-bordered.btn-success:hover,
 .btn-bordered.btn-success:focus {
-  border-color: rgba(40,183,141,0.7);
+  border-color: rgba(40, 183, 141, 0.7);
 }
 .btn-bordered.btn-royal {
-  border-color: rgba(189,45,245,0.4);
+  border-color: rgba(189, 45, 245, 0.4);
   color: #bd2df5;
 }
 .btn-bordered.btn-royal:hover,
 .btn-bordered.btn-royal:focus {
-  border-color: rgba(189,45,245,0.7);
+  border-color: rgba(189, 45, 245, 0.7);
 }
-
 
 .btn-minimal {
   margin: 0;
@@ -289,12 +281,17 @@
   width: calc(100% - 20px);
   height: 1px;
   background: currentColor;
-  content: '';
+  content: "";
   opacity: 0.65;
-  -webkit-transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  -webkit-transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
 }
 .btn-minimal:before {
   position: absolute;
@@ -303,12 +300,17 @@
   width: calc(100% - 20px);
   height: 1px;
   background: currentColor;
-  content: '';
+  content: "";
   opacity: 0.65;
-  -webkit-transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1), -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  -webkit-transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
+  transition: transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    opacity 0.5s cubic-bezier(0.02, 0.01, 0.47, 1),
+    -webkit-transform 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
 }
 .btn-minimal:hover,
 .btn-minimal:focus {
@@ -318,31 +320,27 @@
 .btn-minimal:focus:after {
   opacity: 1;
   -webkit-transform: translateX(-10px) rotate(0.001deg);
-          transform: translateX(-10px) rotate(0.001deg);
+  transform: translateX(-10px) rotate(0.001deg);
 }
 .btn-minimal:hover:before,
 .btn-minimal:focus:before {
   opacity: 1;
   -webkit-transform: translateX(10px) rotate(0.001deg);
-          transform: translateX(10px) rotate(0.001deg);
+  transform: translateX(10px) rotate(0.001deg);
 }
 .btn-minimal.btn-xs {
-
   font-size: 12px;
   font-family: inherit;
 }
 .btn-minimal.btn-sm {
-
   font-size: 18px;
   font-family: inherit;
 }
 .btn-minimal.btn-md {
   font-size: 19px;
   font-family: inherit;
-
 }
 .btn-minimal.btn-lg {
-
   font-size: 24px;
   font-family: inherit;
 }
@@ -365,8 +363,6 @@
   color: #bd2df5;
 }
 
-
-
 /* Helpers */
 
 .btn-block {
@@ -382,7 +378,6 @@
   outline: none !important;
 }
 
-
 .btn-no-outline:focus {
   outline: none;
 }
@@ -391,7 +386,6 @@
   color: $grayDark;
   background: $grayLightest;
 }
-
 
 .btn-simple.btn-green {
   color: $white;
@@ -407,12 +401,6 @@
   border: 2px solid $blue;
 }
 
-
-
-
-
-
-
 .btn-no-padding {
   padding-left: 0 !important;
   padding-right: 0 !important;
@@ -423,12 +411,9 @@
   width: 100%;
 }
 
-
-
 .btn-green {
   background: $green;
   border: 2px solid $green;
-
 }
 
 .btn-orange {
@@ -443,23 +428,22 @@
   color: $black;
 }
 
-.btn-white-green{
+.btn-white-green {
   background: $white;
   border: 2px solid $white;
   color: $green;
 }
 
-
 .btn-mobile {
   width: 100%;
-  @include mq('tablet') {
+  @include mq("tablet") {
     width: auto;
   }
 }
 
 .btn-header {
   width: 100%;
-  background: #1F3357;
+  background: #1f3357;
   height: 52px;
   @include mq("tablet") {
     width: auto;
