--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -48,8 +48,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid #009453;
   background-color: $white;
-  box-shadow: 0 1px 13px 0 rgba($white, 0.5);
+  box-shadow: 0 1px 13px 0 rgba($black, 0.11);
   color: $black;
   width: 90%;
   padding: 1.25em 5%;
