--- a/src/components/HomeIntro/Styles.module.scss
+++ b/src/components/HomeIntro/Styles.module.scss
@@ -63,7 +63,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+
   align-content: flex-start;
   margin-top: 30px;
   @include mq("tablet") {
@@ -83,15 +83,19 @@
 
 .ctaSecondary {
   @include links-on-dark;
+  padding-top: 10px;
   margin-top: 30px;
   font-size: 21px;
+  text-align: center;
   a {
     font-weight: normal;
   }
   @include mq("tablet") {
+    padding-top: 18px;
     margin-top: 0;
     margin-left: 50px;
     flex-direction: row;
+    text-align: left;
   }
 }
 
