--- a/src/styles/Choice.module.scss
+++ b/src/styles/Choice.module.scss
@@ -58,7 +58,6 @@
 .bannerActions {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-top: 30px;
   @include mq("tablet") {
     margin-top: 40px;
@@ -77,14 +76,18 @@
 .bannerCtaSecondary {
   @include links-on-dark;
   font-size: 21px;
+  padding-top: 10px;
   margin-top: 30px;
+  text-align: center;
   a {
     font-weight: normal;
   }
   @include mq("tablet") {
+    padding-top: 18px;
     margin-top: 0;
     margin-left: 50px;
     flex-direction: row;
+    text-align: left;
   }
 }
 
