--- a/src/styles/Mixins.module.scss
+++ b/src/styles/Mixins.module.scss
@@ -176,7 +176,7 @@
     text-decoration: underline;
     font-weight: 700;
   }
-  a.hover {
+  a:hover {
     color: $linkHover;
     -webkit-transition: top 0.04s ease-out;
     transition: top 0.04s ease-out;
