--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -45,9 +45,7 @@
 }
 
 .socialBlock {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
   border: 1px solid #009453;
   background-color: $white;
   box-shadow: 0 1px 13px 0 rgba($black, 0.11);
